exewrap.exe のあるフォルダが "#" を含む時に落ちる現象を解決。